crates/compiler/src/tests/e2e/good/0221_array_element_access_closure/main.gom
fn map_array3[T, U](arr: [T; 3], f: (T) -> U) -> [U; 3] {
    [f(arr[0]), f(arr[1]), f(arr[2])]
}

fn main() {
    let arr: [uint8; 3] = [10, 20, 30];
    let result = map_array3(arr, |x| x.to_string());
    println(result[0]);
    println(result[1]);
    println(result[2]);
}
